apps/oxlint/src/snapshots/fixtures__cli__tsgolint_type_error_--type-check -c config-type-check-false.json@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --type-check -c config-type-check-false.json
working directory: fixtures/cli/tsgolint_type_error
----------

  ! eslint(no-unused-vars): Variable 'foo' is declared but never used. Unused variables should start with a '_'.
   ,-[index.js:2:7]
 1 | "use strict";
 2 | const foo = "42";
   :       ^|^
   :        `-- 'foo' is declared here
   `----
  help: Consider removing this declaration.

  ! eslint(no-unused-vars): Variable 'foo' is declared but never used. Unused variables should start with a '_'.
   ,-[index.ts:1:7]
 1 | const foo: number = "42";
   :       ^|^
   :        `-- 'foo' is declared here
   `----
  help: Consider removing this declaration.

  x typescript(TS2322): Type 'string' is not assignable to type 'number'.
   ,-[index.ts:1:7]
 1 | const foo: number = "42";
   :       ^^^
   `----

Found 2 warnings and 1 error.
Finished in <variable>ms on 2 files with 109 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
